# coreutils.rs

./: .gitignore  01.what-is-coreutils.html  02.impl-yes.html  03.impl-factor.html  04.impl-whoami.html  404.html  CNAME  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: book.yml
coreutils.book/: book.toml
coreutils.book/src/: 01.what-is-coreutils.md  02.impl-yes.md  03.impl-factor.md  04.impl-whoami.md  SUMMARY.md  ext.fastmul.md  ext.fastpow.md
coreutils.book/src/ext/: fastmul.md  fastpow.md  isqrt.md
ext/: fastmul.html  fastpow.html  isqrt.html
factor/: Cargo.toml
factor/src/: main.rs
fastcalc/: Cargo.toml
fastcalc/src/: lib.rs
prime/: Cargo.toml
prime/src/: lib.rs
whoami/: Cargo.toml
whoami/src/: main.rs
yes/: Cargo.toml
yes/src/: main.rs
