[package]
name = "factor"
version = "0.1.0"
authors = ["zombie110year <zombie110year@outlook.com>"]
edition = "2018"
description = """
Print the prime factors of each specified integer NUMBER. If none
are specified on the command line, read them from standard input"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"